iOS no longer zooms-in, main page service cards 1 row on mobile, background video whole page

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,11 @@ li {
   font-size: 1.5rem;
 }
 
+/* iOS prevent zooming */
+body {
+  touch-action: pan-x pan-y;
+}
+
 
 .handsImage {
   width: 16rem;
@@ -298,8 +303,8 @@ figcaption:hover {
 }
 
 #background-video {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 
   position: fixed;
@@ -311,10 +316,10 @@ figcaption:hover {
   /* background-image:
     repeating-radial-gradient(circle, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.55)); */
   /* background-image: url("../public/img/kitchen/kitchen8.jpg"); */
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat;
   background-size: cover;
   background-size: 100% 100%;
-  position: relative;
+  position: relative; */
 
 
 
@@ -365,6 +370,11 @@ button.active {
   margin-bottom: auto; */
   /* display: block;
   text-align: center; */
+  top: 41%;
+  left: 36%;
+}
+
+#quoteLogo {
   top: 3%;
   left: 25%;
 }
@@ -1553,6 +1563,8 @@ body>footer {
     grid-template-columns: 50% 50%;
   }
 
+
+
   /* Basement */
   .basementPara {
     margin-left: 200px;
@@ -1628,7 +1640,7 @@ body>footer {
 
 
 /* iPad and below */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 900px) {
 
   .nav-link {
     font-size: 1rem;
@@ -1643,6 +1655,7 @@ body>footer {
     width: 100px;
     height: 100px;
     margin-left: 40px;
+
   }
 
   /* #navbar {
@@ -1665,10 +1678,32 @@ body>footer {
     /* border: 2px solid green; */
 
     font-size: 1.8rem;
-    color: white;
+    color: black;
     z-index: 10;
     position: relative;
   }
+
+  /* #background-video {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 0;
+
+  } */
+
+  /* background-image:
+      repeating-radial-gradient(circle, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.55)); */
+  /* background-image: url("../public/img/kitchen/kitchen8.jpg"); */
+  /* background-repeat: no-repeat;
+    background-size: cover;
+    background-size: 100% 100%;
+    position: relative; */
 
 
   /* Home page */
